# amazon-sites

./: .claude.json  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  drupal-content-strategy.md
ai-agents/content-writer-agent/: Dockerfile  requirements.txt
ai-agents/content-writer-agent/src/: main.py
ai-agents/seo-agent/: Dockerfile  requirements.txt
ai-agents/seo-agent/src/: main.py
ai-agents/social-media-agent/: Dockerfile  OPERATIONAL_WORKFLOW_README.md  README.md
ai-agents/social-media-agent/src/: main.py
ai-agents/video-generator-agent/: Dockerfile  requirements.txt
ai-agents/video-generator-agent/src/: main.py
ai-agents/video-script-agent/: Dockerfile
ai-agents/video-script-agent/src/: main.py
mcp-server/: .env.example  Dockerfile  PROMPTS.md  pyproject.toml  server.py
mcp-server/tools/: content.py  seo.py  social.py  video_generator.py  video_script.py
mcp-server/utils/: client.py
seller-backend/: .dockerignore  Dockerfile
seller-backend/config/: services.yml  settings.php
seller-backend/drupal/: composer.json
seller-backend/scripts/: install-drupal.sh  seed-content.php  setup-content-architecture.php
seller-frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
seller-frontend/public/: llms.txt  robots.txt  sitemap.xml
seller-frontend/src/: App.tsx  index.css
seller-frontend/src/components/: AuthContext.tsx  FeatureSection.tsx  HeroSection.tsx  Layout.tsx  PricingSection.tsx  SEO.tsx  TrialContext.tsx
seller-frontend/src/hooks/: use-blogs.ts  (+3 more)
(+526 files in other folders)
