[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sellerbuddy-mcp"
version = "0.1.0"
description = "SellerBuddy AI Agents — MCP Server"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
sellerbuddy-mcp = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["tools", "utils"]
